[metadata]
name = blackCatTestImages
version = 1.0.0
author = Cassandra Copp
author_email = cass16180@gmail.com
description = runs algorithm on assortment of test images
long_description = file: README.md
long_description_content_type = markdown
url = https://github.com/cass1618/blackCatTestImages
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:

[options.packages.find]
where = src

[options.package_data]
blackCatTestImages = ["images/*.jpg"]